[package]
name = "friendly_id"
version = "0.2.0"
authors = ["Mariusz Smykula <mariuszs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The FriendlyID library converts a given UUID to a URL-friendly ID which is based on Base62"
homepage = "https://github.com/Devskiller/friendly-id"
repository = "https://github.com/mariuszs/friendly_id"
readme = "README.md"
keywords = ["base62", "encoding", "decoding", "url", "shortener", "uuid", "url62"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
failure = "0.1.8"